# babl-rs

./: .gitignore  README.md
babl/: Cargo.toml  Gir.toml  docs.md
babl/src/: lib.rs  object.rs
babl/src/auto/: enums.rs  flags.rs  functions.rs  mod.rs
babl/sys/: Cargo.toml  Gir.toml
babl/sys/src/: lib.rs
babl/sys/tests/: abi.rs  constant.c  layout.c  manual.h
